--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snipster",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A snippets manager",
   "main": "index.js",
   "author": "jared hanstra",
@@ -13,6 +13,7 @@
     "commander": "^2.9.0",
     "cson": "^4.1.0",
     "fs-extra": "^3.0.1",
+    "ignore-walk": "^6.0.2",
     "inquirer": "^7.0.1",
     "jsontoxml": "^0.0.11",
     "prompt": "^1.0.0",
@@ -21,7 +22,8 @@
     "xml2js": "^0.4.17"
   },
   "scripts": {
-    "publish": "npm publish"
+    "publish": "npm publish",
+    "install": "npm install -g"
   },
   "bin": {
     "snipster": "./index.js"
