--- a/package.json
+++ b/package.json
@@ -17,17 +17,24 @@
     "inquirer": "^7.0.1",
     "jsontoxml": "^0.0.11",
     "prompt": "^1.0.0",
+    "resolve-dir": "^1.0.1",
     "strip-json-comments": "^2.0.1",
     "write": "^0.3.3",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.8.7"
   },
   "scripts": {
     "publish": "npm publish",
-    "format": "prettier --write .",
-    "install": "npm install -g"
+    "lint": "eslint --fix --ext .js .",
+    "format": "prettier --write ."
   },
   "bin": {
     "snipster": "./index.js"
