--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "jared hanstra",
   "license": "MIT",
   "dependencies": {
+    "@octokit/rest": "^19.0.7",
     "chalk": "^4.1.2",
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
@@ -15,12 +16,14 @@
     "fs-extra": "^3.0.1",
     "ignore-walk": "^6.0.2",
     "inquirer": "^8.2.5",
+    "js-yaml": "^4.1.0",
     "jsontoxml": "^0.1.1",
     "prompt": "^1.3.0",
     "resolve-dir": "^1.0.1",
     "strip-json-comments": "^2.0.1",
     "write": "^2.0.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "eslint": "^8.37.0",
@@ -34,7 +37,9 @@
   "scripts": {
     "publish": "npm publish",
     "lint": "eslint --fix --ext .js .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "open-folders": "open ~/Application Support/Code/User/snippets & open ~/.vscode/extensions & open ~/Code/snippets",
+    "update-vscode-language-data": "node ./scripts/update-vscode-language-data.js"
   },
   "bin": {
     "snipster": "./index.js"
