--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-node_modules/
+# Git Ignore
+# Also used by CSpell and Stylelint
+
+# @kitschpatrol/repo-config boilerplate
+.astro/
 .DS_Store
-*.log
-.next/
-.build/
-layout.md
-lerna-debug.log
 .env
+.env.*
+!.env.example
+.svelte-kit/
+{tmp,temp}/
+**/*.min.js
+/scratch/
+bower_components/
+build/
+coverage/
+dist/
+node_modules/
+vendor/
 
-
-haters/
+# Customizations
