--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,22 @@
-examples/
+# Prettier Ignore
+# Does not inherit from .gitignore
+
+# @kitschpatrol/repo-config boilerplate
+.astro/
+.DS_Store
+.svelte-kit/
+{tmp,temp}/
+**/*.min.js
+/scratch/
+bower_components/
+build/
+coverage/
+dist/
+node_modules/
+vendor/
+
+# @kitschpatrol/prettier-config boilerplate
+pnpm-lock.yaml
+package-lock.json
+
+# Customizations
