--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "snipster",
-  "version": "0.4.3",
-  "description": "A snippets manager",
-  "main": "index.js",
-  "author": "jared hanstra",
-  "license": "MIT",
-  "dependencies": {
-    "@octokit/rest": "^19.0.7",
-    "chalk": "^4.1.2",
-    "co": "^4.6.0",
-    "co-prompt": "^1.0.0",
-    "columnify": "^1.6.0",
-    "commander": "^2.20.3",
-    "cson": "^4.1.0",
-    "fs-extra": "^3.0.1",
-    "ignore-walk": "^6.0.2",
-    "inquirer": "^8.2.5",
-    "js-yaml": "^4.1.0",
-    "jsontoxml": "^0.1.1",
-    "prompt": "^1.3.0",
-    "resolve-dir": "^1.0.1",
-    "strip-json-comments": "^2.0.1",
-    "write": "^2.0.0",
-    "xml2js": "^0.4.23",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "prettier": "^2.8.7"
-  },
-  "scripts": {
-    "publish": "npm publish",
-    "lint": "eslint --fix --ext .js .",
-    "format": "prettier --write .",
-    "open-folders": "open ~/Application Support/Code/User/snippets & open ~/.vscode/extensions & open ~/Code/snippets",
-    "update-vscode-language-data": "node ./scripts/update-vscode-language-data.js"
-  },
-  "bin": {
-    "snipster": "./index.js"
-  }
+	"name": "snip-cli",
+	"version": "1.0.0",
+	"type": "module",
+	"description": "TBD",
+	"private": true,
+	"packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2",
+	"bin": {
+		"snip": "./dist/cli.js"
+	},
+	"main": "./dist/cli.js",
+	"scripts": {
+		"build": "tsx ./scripts/build-cli.ts",
+		"fig:generate": "npm run build && NODE_ENV=development node dist/cli.js generate-fig-spec > /tmp/snip.ts && npx @fig/publish-spec -p /tmp/snip.ts && rm /tmp/snip.ts",
+		"fix": "pnpm shared-config --fix",
+		"lint": "pnpm shared-config --lint",
+		"prebuild": "jq '{command: .bin | keys[], version, description}' package.json > ./src/generated/package-info.json",
+		"start": "node ./dist/cli.js",
+		"test": "echo TODO",
+		"test:watch": "echo TODO"
+	},
+	"dependencies": {
+		"@commander-js/extra-typings": "^12.1.0",
+		"commander": "^12.1.0",
+		"execa": "^9.1.0",
+		"fs-extra": "^11.2.0",
+		"ignore-walk": "^6.0.5",
+		"inquirer": "^9.2.22"
+	},
+	"devDependencies": {
+		"@fig/complete-commander": "^3.0.0",
+		"@kitschpatrol/shared-config": "^4.6.6",
+		"@types/fs-extra": "^11.0.4",
+		"@types/ignore-walk": "^4.0.3",
+		"@types/inquirer": "^9.0.7",
+		"@types/node": "^20.12.12",
+		"chalk": "^5.3.0",
+		"date-fns": "^3.6.0",
+		"esbuild": "^0.21.4",
+		"node-jq": "^4.4.0",
+		"npm-run-all": "^4.1.5",
+		"temporal-polyfill": "^0.2.4",
+		"tslog": "^4.9.2",
+		"tsx": "^4.11.0",
+		"typescript": "^5.4.5",
+		"vitest": "^1.6.0",
+		"zod": "^3.23.8"
+	}
 }
