--- a/package.json
+++ b/package.json
@@ -1,23 +1,56 @@
 {
-	"name": "snip-cli",
-	"version": "1.0.0",
+	"name": "@kitschpatrol/snip",
+	"version": "0.0.0",
 	"type": "module",
-	"description": "TBD",
-	"private": true,
-	"packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2",
-	"bin": {
-		"snip": "./dist/cli.js"
+	"description": "A CLI tool for snippet management.",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/kitschpatrol/snip.git"
 	},
-	"main": "./dist/cli.js",
+	"homepage": "https://github.com/kitschpatrol/snip",
+	"bugs": {
+		"url": "https://github.com/kitschpatrol/snip/issues",
+		"email": "eric@ericmika.com"
+	},
+	"author": {
+		"name": "Eric Mika",
+		"email": "eric@ericmika.com",
+		"url": "https://ericmika.com"
+	},
+	"contributors": [
+		{
+			"name": "Original Author: Jared Hanstra",
+			"url": "https://github.com/jhanstra"
+		}
+	],
+	"license": "MIT",
+	"packageManager": "pnpm@9.1.2+sha512.127dc83b9ea10c32be65d22a8efb4a65fb952e8fefbdfded39bdc3c97efc32d31b48b00420df2c1187ace28c921c902f0cb5a134a4d032b8b5295cbfa2c681e2",
+	"engines": {
+		"node": ">=18.0.0",
+		"pnpm": ">=8.0.0"
+	},
+	"bin": {
+		"snip": "./bin/cli.js"
+	},
+	"main": "./bin/cli.js",
+	"files": [
+		"bin/*"
+	],
+	"keywords": [
+		"cli",
+		"snippets",
+		"vscode"
+	],
 	"scripts": {
 		"build": "tsx ./scripts/build-cli.ts",
-		"fig:generate": "npm run build && NODE_ENV=development node dist/cli.js generate-fig-spec > /tmp/snip.ts && npx @fig/publish-spec -p /tmp/snip.ts && rm /tmp/snip.ts",
+		"fig:generate": "npm run build && NODE_ENV=development node bin/cli.js generate-fig-spec > /tmp/snip.ts && npx @fig/publish-spec -p /tmp/snip.ts && rm /tmp/snip.ts",
 		"fix": "pnpm shared-config --fix",
 		"lint": "pnpm shared-config --lint",
 		"prebuild": "jq '{command: .bin | keys[], version, description}' package.json > ./src/generated/package-info.json",
-		"start": "node ./dist/cli.js",
-		"test": "echo TODO",
-		"test:watch": "echo TODO"
+		"release": "pnpm run build && pnpm bumpp --commit 'Release: %s' && pnpm publish --otp $(op read 'op://Personal/Npmjs/one-time password?attribute=otp')",
+		"start": "node ./bin/cli.js",
+		"test": "vitest",
+		"update-language-data": "tsx ./scripts/update-vscode-language-data.ts"
 	},
 	"dependencies": {
 		"@commander-js/extra-typings": "^12.1.0",
@@ -34,16 +67,19 @@
 		"@types/ignore-walk": "^4.0.3",
 		"@types/inquirer": "^9.0.7",
 		"@types/node": "^20.12.12",
+		"bumpp": "^9.4.1",
 		"chalk": "^5.3.0",
 		"date-fns": "^3.6.0",
 		"esbuild": "^0.21.4",
 		"node-jq": "^4.4.0",
 		"npm-run-all": "^4.1.5",
-		"temporal-polyfill": "^0.2.4",
 		"tslog": "^4.9.2",
 		"tsx": "^4.11.0",
 		"typescript": "^5.4.5",
 		"vitest": "^1.6.0",
 		"zod": "^3.23.8"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
