Update dependencies. Pass lint.

--- a/package.json
+++ b/package.json
@@ -34,54 +34,46 @@
 		"dist/*"
 	],
 	"scripts": {
-		"build": "pkgroll --clean-dist --minify --tsconfig tsconfig.build.json",
+		"build": "pkgroll --clean-dist",
 		"clean": "git rm -f pnpm-lock.yaml ; git clean -fdX",
 		"fix": "kpi fix",
 		"lint": "kpi lint",
-		"release": "bumpp --commit 'Release: %s' && pnpm run build && pnpm publish --otp $(op read 'op://Personal/Npmjs/one-time password?attribute=otp')",
+		"release": "bumpp --commit 'Release: %s' && pnpm run build && NPM_AUTH_TOKEN=$(op read 'op://Personal/npm/token') && pnpm publish",
 		"start": "node ./dist/cli.js",
 		"test": "vitest",
 		"update-language-data": "tsx ./scripts/update-vscode-language-data.ts"
 	},
 	"dependencies": {
-		"@commander-js/extra-typings": "^13.1.0",
+		"@commander-js/extra-typings": "^14.0.0",
 		"@types/fs-extra": "^11.0.4",
 		"@types/ignore-walk": "^4.0.3",
-		"@types/inquirer": "^9.0.7",
-		"commander": "^13.1.0",
-		"execa": "^9.5.2",
-		"fs-extra": "^11.3.0",
-		"ignore-walk": "^7.0.0",
-		"inquirer": "^12.4.2"
+		"@types/inquirer": "^9.0.9",
+		"commander": "^14.0.2",
+		"execa": "^9.6.0",
+		"fs-extra": "^11.3.2",
+		"ignore-walk": "^8.0.0",
+		"inquirer": "^12.10.0"
 	},
 	"devDependencies": {
-		"@kitschpatrol/shared-config": "^5.2.0",
-		"@types/node": "^20.17.23",
-		"bumpp": "^10.0.3",
-		"chalk": "^5.4.1",
+		"@kitschpatrol/shared-config": "^5.8.1",
+		"@types/node": "^20.19.24",
+		"bumpp": "^10.3.1",
 		"date-fns": "^4.1.0",
-		"pkgroll": "^2.11.2",
-		"tslog": "^4.9.3",
-		"tsx": "^4.19.3",
-		"typescript": "~5.7.3",
-		"untildify": "^5.0.0",
-		"vitest": "^3.0.7",
-		"zod": "^3.24.2"
+		"mdat-plugin-cli-help": "^1.0.1",
+		"picocolors": "^1.1.1",
+		"pkgroll": "^2.20.1",
+		"tslog": "^4.10.2",
+		"tsx": "^4.20.6",
+		"typescript": "~5.9.3",
+		"untildify": "^6.0.0",
+		"vitest": "^4.0.7",
+		"zod": "^3.25.76"
 	},
-	"packageManager": "pnpm@10.5.2",
+	"packageManager": "pnpm@10.20.0",
 	"engines": {
 		"node": ">=20.9.0"
 	},
 	"publishConfig": {
 		"access": "public"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"esbuild",
-			"puppeteer"
-		],
-		"overrides": {
-			"eslint-plugin-markdown": "^5.1.0"
-		}
 	}
 }
